2009-03-16  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/Makefile : MOSH_GENSYM_START=5000.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (psyntax): Changed file-options to use (rnrs enums).

2009-03-15  higepon  <higepon@users.sourceforge.jp>

        * cprocedures.cpp: We allocate CProcedure Objects after GC_INIT is issued.

        * free-vars.scm : (newline) commented out, since ./mosh test/srfi-misc.scm fails.

2009-03-15  kokosabu  <kokosabu@gmail.com>

        * PortProcedures.cpp : Added newline,
                               Fixed display, write.

2009-03-15  higepon  <higepon@users.sourceforge.jp>

        * CompilerProcedures.cpp : Deleted unused code.

        * ByteArrayBinaryInputPort.cpp : Implmented readBytes, readSome and readAll.

        * ByteArrayBinaryOutputPort.cpp/h : Added for string->bytevector.

2009-03-14  higepon  <higepon@users.sourceforge.jp>

        * Implmented "eol-style" for textual-input-port.

        * Refactoring Transcoder things.

        * Makefile.am : disable-profiler works fine.

2009-03-13  higepon  <higepon@users.sourceforge.jp>

        * Now passes all of (rnrs io simple) tests.

        * PortProcedures.cpp (peek-char): Fixed wrong argument length.

        * library.scm (call-with-output-file): Fixed for mulitple values.

        * Implemented and tested custom-textual-input/output-port.

        * Implemented and tested custom-textual-output-port.

        * test/output-port.scm : Added tests for custom-textual-output-port.

        * test/input-port.scm: Added tests for custom-textual-input-port.

        * Implemented and tested custom-textual-input-port.

        * CustomTextualInputPort.cpp : Added not implemented.

        * CustomBinaryInputOutputPort.cpp : Added <custom-binary-input/output-port>.

        * ErrorProcedures.cpp : Fixed the bug of &i/o-encoding arguments error.

2009-03-12  higepon  <higepon@users.sourceforge.jp>
